# kms-elements

./: .gitignore  CMakeLists.txt  README.md  README.swarm.md  changeName.sh  release.sh  restart.sh  showlog.sh  update_nodejs_module.sh
docker/: Dockerfile  README.md  build-run-test.sh  entrypoint.sh  generate.sh  install_docker.sh  install_kms_elements.sh  install_kms_so_files_only.sh
kurento-test-node/: ServerURLS.js  server.js
kurento-test-node/static/bower_components/kurento-utils/: .bower.json
kurento-test-nodejs/: composite.js  server.js
kurento-test-nodejs/static/: index.html
kurento-test-nodejs/static/js/: index.js
server/interface/: elements.StyleComposite.kmd.json
src/: restart.sh  taillog.sh
src/gst-plugins/: CMakeLists.txt  kmscompositemixer.c  kmselements.c  kmsepisodeoverlay.c  kmsepisodeoverlay.h  kmsstylecompositemixer.c  kmsstylecompositemixer.h  kmstextoverlay.c  kmstextoverlay.h
src/server/implementation/HttpServer/: CMakeLists.txt
src/server/implementation/objects/: CompositeImpl.cpp  CompositeImpl.hpp  StyleCompositeImpl.cpp  StyleCompositeImpl.hpp  TextOverlayImpl.cpp  TextOverlayImpl.hpp
src/server/interface/: elements.Composite.kmd.json  elements.StyleComposite.kmd.json  elements.TextOverlay.kmd.json
